--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,28 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "baseUrl": ".",
     "paths": {
-        "evmosjs":["packages/evmosjs"],
-        "@tharsis/address-converter": ["./packages/address-converter/*"],
-        "@tharsis/eip712":["packages/eip712"],
-        "@tharsis/proto":["packages/proto"],
-        "@tharsis/provider":["./packages/provider/*"],
-        "@tharsis/transactions":["./packages/transactions/*"]
+      "evmosjs": [
+        "packages/evmosjs"
+      ],
+      "@tharsis/address-converter": [
+        "./packages/address-converter/*"
+      ],
+      "@tharsis/eip712": [
+        "packages/eip712"
+      ],
+      "@tharsis/proto": [
+        "packages/proto"
+      ],
+      "@tharsis/provider": [
+        "./packages/provider/*"
+      ],
+      "@tharsis/transactions": [
+        "./packages/transactions/*"
+      ]
     }
   }
 }
