--- a/packages/transactions/package.json
+++ b/packages/transactions/package.json
@@ -33,7 +33,9 @@
     "@oraichain/cosmosjs": "^0.0.94",
     "@tharsis/eip712": "^0.2.2",
     "@tharsis/proto": "^0.1.17",
+    "@types/long": "^4.0.2",
     "@types/node": "^17.0.21",
+    "bech32": "1.1.3",
     "link-module-alias": "^1.2.0",
     "shx": "^0.3.4"
   },
