--- a/packages/transactions/package.json
+++ b/packages/transactions/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@oraichain/kawaiiversejs",
+  "name": "@oraichain/kawaiiverse-txs",
   "description": "Transactions generator for Kawaiiverse, forked from @tharsis/transactions and added some custom messages",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
